infra/services/observability/headlamp/headlamp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headlamp
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headlamp
  template:
    metadata:
      labels:
        app: headlamp
    spec:
      serviceAccountName: headlamp
      volumes:
        - name: headlamp-data
          emptyDir: {}
        - name: headlamp-tmp
          emptyDir: {}
      containers:
        - name: headlamp
          image: ghcr.io/headlamp-k8s/headlamp:latest
          imagePullPolicy: Always
          args:
            - "-in-cluster"
            - "-plugins-dir=/headlamp/plugins"
            - "-oidc-client-id=$(OIDC_CLIENT_ID)"
            - "-oidc-client-secret=$(OIDC_CLIENT_SECRET)"
            - "-oidc-idp-issuer-url=$(OIDC_ISSUER_URL)"
            - "-oidc-use-access-token=true"
          ports:
            - containerPort: 4466
              name: http
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            fsGroup: 10001
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: headlamp-data
              mountPath: /headlamp
            - name: headlamp-tmp
              mountPath: /tmp
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 4466
            initialDelaySeconds: 30
            timeoutSeconds: 30
          livenessProbe:
            tcpSocket:
              port: 4466
            initialDelaySeconds: 30
            timeoutSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
              ephemeral-storage: 100Mi
            limits:
              cpu: 500m
              memory: 1Gi
              ephemeral-storage: 500Mi
