infra/services/observability/headlamp/headlamp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: infra
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 4466
      protocol: TCP
      name: http
      nodePort: 30466
  selector:
    app: headlamp
