infra/services/observability/headlamp/headlamp-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: infra
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headlamp.mydomain.com`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: headlamp
          port: 80
  tls:
    certResolver: le
